html placeholder changed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                     type="text"
                     id="sourceStation"
                     name="sourceStation"
-                    placeholder="e.g. Bhopal Junction (BP)"
+                    placeholder="e.g. Bhopal (Don't overwrite station name so that station name can be matched)"
                     required>
         </div>
 
@@ -64,7 +64,7 @@
                     type="text"
                     id="destinationStation"
                     name="destinationStation"
-                    placeholder="e.g. Mumbai Central"
+                    placeholder="e.g. Mumbai (Don't over write station name)"
                     required>
         </div>
 
