place holder changed

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                     type="text"
                     id="sourceStation"
                     name="sourceStation"
-                    placeholder="e.g. Bhopal (Don't overwrite station name so that station name can be matched)"
+                    placeholder="e.g. Bhopal (Don't overwrite station name to match station)"
                     required>
         </div>
 
